add a switch to control cache disable or enable

--- a/templates/room.html
+++ b/templates/room.html
@@ -1912,6 +1912,13 @@ html[dir], [dir] body, [dir] .epc-page-container {
                     <option value="CostAmt">CostAmt</option>
                 </select>
             </label>
+            <label>
+                <span>EnableCache :</span>
+                <select id="enableCache" name="enableCache">
+                    <option value="true">Enable</option>
+                    <option value="false">Disable</option>
+                </select>
+            </label>
             <label style="display: none">
                 <span>GroupID :</span>
                 <input id="groupID" type="text" name="groupID" placeholder="1" value="1" readonly="readonly"/>
