--- a/templates/room.html
+++ b/templates/room.html
@@ -1910,22 +1910,36 @@ html[dir], [dir] body, [dir] .epc-page-container {
             <label id="roomIdSelect">
                 <span>RoomId :</span>
                 <select id="roomId" name="roomId">
-                    <option value="166628">166628</option>
-                    <option value="166629">166629</option>
-                    <option value="193407">193407</option>
-                    <option value="193410">193410</option>
-                    <option value="193413">193413</option>
-                    <option value="271897">271897</option>
-                    <option value="200160226">200160226</option>
-                    <option value="200160278">200160278</option>
-                    <option value="200160302">200160302</option>
-                    <option value="200160344">200160344</option>
-                    <option value="200160364">200160364</option>
-                    <option value="200160421">200160421</option>
-                    <option value="201119429">201119429</option>
-                    <option value="201119434">201119434</option>
-                    <option value="201119439">201119439</option>
-                    <option value="201119443">201119443</option>
+                    <option value="193413">193413    (32)</option>
+                    <option value="166628">166628    (32)</option>
+                    <option value="271897">271897    (32)</option>
+                    <option value="166629">166629    (32)</option>
+                    <option value="193407">193407    (32)</option>
+                    <option value="193410">193410    (32)</option>
+                    <option value="200160344">200160344 (31)</option>
+                    <option value="201119439">201119439 (31)</option>
+                    <option value="201119434">201119434 (31)</option>
+                    <option value="200160302">200160302 (31)</option>
+                    <option value="200160226">200160226 (31)</option>
+                    <option value="201119443">201119443 (31)</option>
+                    <option value="200160364">200160364 (31)</option>
+                    <option value="201119429">201119429 (30)</option>
+                    <option value="200160278">200160278 (30)</option>
+                    <option value="200160421">200160421 (30)</option>
+                    <option value="105328">105328    (26)</option>
+                    <option value="201761441">201761441 (26)</option>
+                    <option value="97107">97107     (26)</option>
+                    <option value="97109">97109     (26)</option>
+                    <option value="201761446">201761446 (26)</option>
+                    <option value="201119228">201119228 (26)</option>
+                    <option value="105339">105339    (26)</option>
+                    <option value="97105">97105     (26)</option>
+                    <option value="200265048">200265048 (26)</option>
+                    <option value="201119217">201119217 (26)</option>
+                    <option value="97110">97110     (26)</option>
+                    <option value="162304">162304    (26)</option>
+                    <option value="201761443">201761443 (26)</option>
+                    <option value="201135839">201135839 (26)</option>
                 </select>
             </label>
             {#            <label>#}
